--- a/src/css/talk.scss
+++ b/src/css/talk.scss
@@ -4,26 +4,113 @@
 
     .itemWrap {
         flex: 1;
-        overflow: auto;
+        overflow: hidden;
         padding-top: .2rem;
 
         .content {
-            // box-sizing: border-box;
-            // padding: 0 .24rem 0 .26rem;
+            padding-top: .4rem;
 
-            
-                .contextBox {
-                    height: .95rem;
+            .contextBox {
+                box-sizing: border-box;
+                padding: 0 .24rem 0 .26rem;
+                margin-bottom: .5rem;
+
+                .head {
+                    width: .9rem;
+                    height: .9rem;
+                    border-radius: 50%;
+                    background: #000;
+                    display: inline-block;
+                    vertical-align: top;
+                }
+
+
+
+                .textBox {
                     box-sizing: border-box;
-                    padding: 0 .24rem 0 .26rem;
-                    .head {
-                        width: .9rem;
-                        height: .9rem;
-                        border-radius: 50%;
-                        background: #000;
+                    padding: .29rem .3rem;
+                    background: #fff;
+                    border-radius: .15rem;
+                    min-height: .86rem;
+                    display: inline-block;
+                    max-width: 5rem;
+                    vertical-align: top;
+                    position: relative;
+
+                    .jiantouLeft {
+                        position: absolute;
+                        width: 0;
+                        height: 0;
+                        border: .15rem solid transparent;
+                        border-right: .15rem solid #fff;
+                        left: -.3rem;
+                        top: .3rem;
+                    }
+
+                    .text {
+                        color: #333333;
+                        font-size: .30rem;
+                        line-height: .36rem;
+
+                        img {
+                            width: 100%;
+                            height: 100%;
+                        }
                     }
                 }
-            
+
+            }
+
+            .myContentBox {
+                &::after {
+                    content: "";
+                    height: 0;
+                    line-height: 0;
+                    clear: both;
+                    visibility: hidden;
+                    display: block;
+                }
+
+                .myhead {
+                    float: right;
+                    margin-left: .27rem;
+                }
+
+                .mytextBox {
+                    float: right;
+                    background: #7de8f2;
+
+                    .jiantouRight {
+                        border-right: 0;
+                        border-left: .15rem solid #7de8f2;
+                        left: 5rem;
+                    }
+
+                    .pScorce {
+                        color: #ffc02b;
+                        font-size: .22rem;
+                        position: absolute;
+                        bottom: -.27rem;
+                        left: 0;
+                    }
+                }
+
+            }
+
+        }
+
+        .talkTime {
+            box-sizing: border-box;
+            padding: .1rem .2rem;
+            background: #242424;
+            border-radius: .2rem;
+            display: table;
+            margin: .2rem auto;
+
+            .date {
+                color: #6a6a6a;
+                font-size: .22rem;
+            }
         }
 
     }
@@ -60,17 +147,25 @@
                 }
             }
 
-            .sendmsg {
+            .sendmsgbox {
                 width: .42rem;
                 height: .42rem;
-                background: url(../img/seng.png)no-repeat;
-                background-size: cover;
+                padding: .2rem;
                 position: absolute;
                 right: .33rem;
-                top: 50%;
-                margin-top: -.21rem;
 
+                .sendmsg {
+                    width: .42rem;
+                    height: .42rem;
+                    background: url(../img/seng.png)no-repeat;
+                    background-size: cover;
+                    position: absolute;
+                    top: 50%;
+                    margin-top: -.21rem;
+
+                }
             }
+
 
             .checkImg {
                 width: .42rem;
