--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -132,6 +132,7 @@ body {
         }
         .content {
             padding: .4rem 0;
+            width: 101%;
         }
 
         &.talkPage {
