--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,6 +1,7 @@
 @import "./reset.scss";
 @import "./mixin.scss";
 @import "./talk.scss";
+
 html,
 body {
     height: 100%;
@@ -19,9 +20,11 @@ body {
     top: 0;
     z-index: 1000;
 }
+
 .app>.istalk {
-    background:#3e3e3e;
+    background: #3e3e3e;
 }
+
 .app>.title>.ListBack {
     width: .22rem;
     height: .36rem;
@@ -40,6 +43,7 @@ body {
     top: 0;
     left: 0;
 }
+
 .app>.title>.accountName {
     position: absolute;
     line-height: 2;
@@ -47,15 +51,18 @@ body {
     left: 50%;
     transform: translateX(-50%);
 }
+
 .app>.title>.mymessage {
-   position: absolute;
-   left: 50%;
-   bottom: -.22rem;
-   transform: translateX(-50%);
-   font-size: .24rem;
-   color:#999999;
+    position: absolute;
+    left: 50%;
+    bottom: -.22rem;
+    transform: translateX(-50%);
+    font-size: .24rem;
+    color: #999999;
     // display: none;
+    white-space: nowrap;
 }
+
 .app {
     height: 100%;
     overflow: auto;
@@ -78,7 +85,7 @@ body {
 
     .itemWrap {
         margin-top: .9rem;
-        
+
 
         &.talkPage {
             height: 100%;
@@ -106,11 +113,6 @@ body {
                 margin-left: .32rem;
                 overflow: hidden;
                 background-size: cover;
-
-                img {
-                    width: 100%;
-                    height: 100%;
-                }
             }
 
             .taskContent {
