--- a/src/css/talk.scss
+++ b/src/css/talk.scss
@@ -9,7 +9,7 @@
 
         .content {
             padding-top: .4rem;
-
+            width: 101%;
             .contextBox {
                 box-sizing: border-box;
                 padding: 0 .24rem 0 .26rem;
@@ -22,6 +22,8 @@
                     background: #000;
                     display: inline-block;
                     vertical-align: top;
+                    background-size: cover;
+                    background-position: center;
                 }
 
 
@@ -30,7 +32,7 @@
                     box-sizing: border-box;
                     padding: .29rem .3rem;
                     background: #fff;
-                    border-radius: .15rem;
+                    border-radius: .18rem;
                     min-height: .86rem;
                     display: inline-block;
                     max-width: 5rem;
@@ -56,6 +58,21 @@
                             width: 100%;
                             height: 100%;
                         }
+                        .yColor {
+                            color:#ffc02b;
+                            font-size: .26rem;
+                            font-weight: bold;
+                        }
+                    }
+                    audio {
+                        // width: 0;
+                        // height: 0;
+                        // visibility: hidden;
+                        height: .32rem;
+                    }
+                    .video {
+                        width: 100%;
+                        border-radius: .15rem;
                     }
                 }
 
@@ -74,6 +91,8 @@
                 .myhead {
                     float: right;
                     margin-left: .27rem;
+                    background-position: center;
+                    background-size: cover;
                 }
 
                 .mytextBox {
@@ -132,10 +151,12 @@
 
             .input {
                 width: 60%;
-                height: 100%;
+                height: .55rem;
                 position: absolute;
-                top: -.07rem;
+                top: 50%;
                 left: .20rem;
+                margin-top: -.35rem;
+                border-radius: .43rem;
                 background: #5b5b5b;
                 outline: none;
                 border: 0;
