--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -2,9 +2,18 @@
 
 html,
 body {
-    height: 100%;
     background: #fff;
+    height: 100%;
+
+    
+
 }
+
+
+
+
+
+
 
 .app>.title {
     width: 100%;
@@ -41,13 +50,12 @@ body {
 
 .app {
     height: 100%;
-    display: flex;
-    flex-direction: column;
+    overflow: auto;
     &::-webkit-scrollbar {
         display: none;
     }
 
-    ::selection {
+    &::selection {
         background: none;
     }
 
@@ -58,7 +66,6 @@ body {
     &::-webkit-selection {
         background: none;
     }
-
     .loginWrap {
         width: 6rem;
         margin: 1.47rem auto 0;
@@ -114,14 +121,13 @@ body {
     }
 
     .itemWrap {
-        flex: 1;
-        overflow: hidden;
+        height: 100%;
         display: none;
         margin-top: .9rem;
-        padding-top: .2rem;
         position: relative;
+
         .loadMore {
-            color:#999999;
+            color: #999999;
             text-align: center;
             position: absolute;
             top: 0;
@@ -130,9 +136,9 @@ body {
             left: 50%;
             transform: translateX(-50%);
         }
+
         .content {
-            padding: .4rem 0;
-            width: 101%;
+            padding: .4rem 0 .8rem 0;
         }
 
         &.talkPage {
@@ -162,6 +168,7 @@ body {
                 overflow: hidden;
                 background-size: cover;
                 background-position: center;
+
                 img {
                     width: 100%;
                     height: 100%;
