--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -66,6 +66,39 @@ body {
     &::-webkit-selection {
         background: none;
     }
+    .loading {
+        position: fixed;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background:rgba(0,0,0,.8);
+        z-index: 10000;
+        .cir {
+            width: .66rem;
+            height: .66rem;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            background: url(../img/loading.png)no-repeat;
+            background-size: cover;
+            margin-top: -.33rem;
+            margin-left: -.33rem;
+            animation: animateba 1s linear infinite;
+        }
+        @keyframes animateba {
+            0% {
+              transform: rotate(0deg);
+              filter: hue-rotate(0deg);
+            }
+            100% {
+              transform: rotate(360deg);
+              filter: hue-rotate(360deg);
+            }
+          }
+    }
     .loginWrap {
         width: 6rem;
         margin: 1.47rem auto 0;
