--- a/src/css/talk.scss
+++ b/src/css/talk.scss
@@ -1,11 +1,10 @@
 .app {
     display: flex;
     flex-direction: column;
-
     .itemWrap {
         flex: 1;
         overflow-x: hidden;
-        overflow-y: hidden;
+        overflow-y: auto;
         padding-top: .2rem;
 
         &::-webkit-scrollbar {
@@ -26,24 +25,26 @@
 
         .content {
             padding-top: .4rem;
-            height: 100%;
-            overflow: auto;
+            // height: 100%;
+            // overflow: auto;
             box-sizing: border-box;
+
             &::-webkit-scrollbar {
                 display: none;
             }
-    
+
             &::selection {
                 background: none;
             }
-    
+
             &::-moz-selection {
                 background: none;
             }
-    
+
             &::-webkit-selection {
                 background: none;
             }
+
             .contextBox {
                 box-sizing: border-box;
                 padding: 0 .24rem 0 .26rem;
@@ -152,7 +153,7 @@
                     .jiantouRight {
                         border-right: 0;
                         border-left: .15rem solid transparent;
-                        left: 0!important;
+                        left: 0 !important;
                     }
 
                     .pScorce {
