--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -114,7 +114,7 @@ body {
                 margin-left: .32rem;
                 overflow: hidden;
                 background-size: cover;
-
+                background-position: center;
             }
 
             .taskContent {
