--- a/src/css/talk.scss
+++ b/src/css/talk.scss
@@ -107,7 +107,7 @@
                         audio {
                             visibility: hidden;
                             height: .01rem;
-                            width: .9rem;
+                            width: 1.5rem;
                         }
 
                         .video {
