--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -238,7 +238,7 @@ body {
                     font-size: .26rem;
                     font-weight: bold;
                     color: #333333;
-
+                    float: right;
                     .dian {
                         width: .20rem;
                         height: .20rem;
@@ -252,6 +252,7 @@ body {
                     margin-left: -.08rem;
                     font-size: 0.28rem;
                     color: #ffab00;
+                    clear: both;
 
                     .num {}
 
