--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -244,7 +244,7 @@ body {
                         height: .20rem;
                         background: #e6604d;
                         border-radius: 50%;
-                        display: inline-block;
+                        display: none;
                     }
                 }
 
