--- a/src/css/talk.scss
+++ b/src/css/talk.scss
@@ -108,7 +108,7 @@
                         audio {
                             visibility: hidden;
                             height: .01rem;
-                            width: 4rem;
+                            width: 2.5rem;
                         }
 
                         .video {
@@ -122,7 +122,7 @@
                             left: .55rem;
                             top: 50%;
                             transform: translateY(-50%);
-                            color:red;
+                            // color:red;
                         }
                     }
 
