--- a/src/css/talk.scss
+++ b/src/css/talk.scss
@@ -122,7 +122,7 @@
                             left: .55rem;
                             top: 50%;
                             transform: translateY(-50%);
-                            // color:red;
+                            color:red;
                         }
                     }
 
