--- a/src/css/talk.scss
+++ b/src/css/talk.scss
@@ -240,8 +240,8 @@
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        position: relative;
-
+        position: fixed;
+        bottom: 0;
         .huashu {
             width: 100%;
             height: 5rem;
@@ -426,7 +426,7 @@
     }
 
     .showScorce {
-        position: absolute;
+        position: fixed;
         font-size: .28rem;
         color: #333;
         top: 0%;
